--- a/js/Nowy folder/data i czas.html
+++ b/js/Nowy folder/data i czas.html
@@ -12,7 +12,7 @@
             border: 1px solid black;
             float: left;
         }
-		date1{
+		#date1{
 		color:red;
 		}
     </style>
@@ -31,6 +31,7 @@
         var year=document.getElementById("year");
         var date=document.getElementById("date");
 		var date1=document.getElementById("date1");
+
         var now=new Date()
         document.write(now);
         year.innerHTML=now.getFullYear()
@@ -38,11 +39,13 @@
         var months = ["1", "2", "3", "4", "5", "6", "7",
          "8", "9", "10", "11", "12"];
         month.innerHTML=months[now.getMonth()]
+
         var months = ["Styczeń", "Luty", "Marzec", "Kwiecień", "Maj", "Czerwiec", "Lipiec",
          "Sierpień", "Wrzesień", "Październik", "Listopad", "Grudzień"];
         date.innerHTML+=now.getDate()+' ';
         date.innerHTML+=months[now.getMonth()];
 		date.innerHTML+=" "+now.getFullYear()+" roku";
+
 		date1.innerHTML+=now.getDate()+' ';
         date1.innerHTML+=months[now.getMonth()];
 		date1.innerHTML+=" "+now.getFullYear()+"r., ";
@@ -51,6 +54,7 @@
 		date1.innerHTML+=now.getHours()+":";
 		date1.innerHTML+=now.getMinutes()+":";
 		date1.innerHTML+=now.getSeconds();
+
     </script>
 </body>
 </html>
