--- a/js/Nowy folder/galeria.html
+++ b/js/Nowy folder/galeria.html
@@ -18,24 +18,29 @@
             height: 200px;
             display: block;
             text-align: center;
+            display: flex;
         }
         .arrleft, .arrright{
             border: 1px solid black;
             width: 5%;
             height: 100%;
-            position: inherit;
             display: inline-block;
+            float: left;
+            margin: 1px;
+
         }
         .left,.center,.right{
             border: 1px solid black;
-            width: 29%;
+            width: 30%;
             height: 100%;
             display: inline-block;
+            float:left;
+            margin: 1px;
         }
         #second{
             width: 100%;
             height: 50%;
-            margin: auto;
+            margin: 1px;
             display: block;
             text-align: center;
             border: 1px solid black;
