--- a/js/egzamin1/index.html
+++ b/js/egzamin1/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pogotowie Komputerowe</title>
     <link rel="stylesheet" href="styl.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
 <div id="kontener">
     <div id="baner">
-
+        <img src="animacja.gif" alt="">
     </div>
     <div id="menu">
         <a href="index.html">O nas</a>
