--- a/js/egzamin1/kontakt.html
+++ b/js/egzamin1/kontakt.html
@@ -6,30 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pogotowie komputerowe</title>
     <link rel="stylesheet" href="styl.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
     <div id="kontener">
         <div id="baner">
-
+            <img src="animacja.gif" alt="">
         </div>
         <div id="menu">
             <a href="index.html">O nas</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
-        <div id="div1"></div>
-        <div id="div2">
+        <div>
             <h3>Formularz kontaktowy</h3>
             <table>
                 <form>
-                    Imię: <input type="text">
-                    Nazwisko: <input type="text">
-                    E-mail: <input type="text">
-                    Usługa:  <option value="">naprawa komputera</option>
+                    <tr><td>Imię: </td><td><input type="text"></td></tr>
+                    <tr><td>Nazwisko: </td><td><input type="text"></td></tr>
+                    <tr><td>E-mail: </td><td><input type="text"></td></tr>
+                    <tr><td>
+                        Usługa:  </td><td> <select><option value="">naprawa komputera</option>
                     <option value="">odzyskiwanie danych</option>
                     <option value="">problemy z oprogramowaniem</option>
                     <option value="">konfiguracja sieci LAN</option>
-                    <option value="">inne</option>
-
+                    <option value="">inne</option></select></td></tr>
+                    <tr><td><input type="checkbox" name="" id=""></td><td>Wyślij kopię wiadomości</td></tr>
+                    <tr><td><input type="button" id="reset" value="Resetuj"></td>
+                    <td><input type="submit" id="submit" value="Prześlij"></td></tr>
                 </form>
             </table>
         </div>
