--- a/js/egzamin1/kontakt.html
+++ b/js/egzamin1/kontakt.html
@@ -31,9 +31,9 @@
                     <option value="problemy z oprogramowaniem">problemy z oprogramowaniem</option>
                     <option value="konfiguracja sieci LAN">konfiguracja sieci LAN</option>
                     <option value="inne">inne</option></select></td></tr>
-                    <tr></tr><td><input type="checkbox" checked></td><td>Wyślij kopię wiadomości</td></tr>
-                    <tr><td><input type="reset" id="reset" value="Resetuj"></td>
-                    <td><input type="button" id="submit" value="Prześlij"></td></tr>
+                    <tr><td></td><td><input type="checkbox" checked>Wyślij kopię wiadomości</td></tr>
+                    <tr><td></td><td><input type="reset" id="reset" value="Resetuj">
+                    <input type="button" id="submit" value="Prześlij"></td></tr>
                 </form>
             </table>
             <p id="linia1"></p>
