--- a/js/egzamin2/zamowienia.html
+++ b/js/egzamin2/zamowienia.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div id="logo">
-        <img src="logo.png" alt="obrazek :)">
+        <img src="logo.png" alt="obrazek :)" width="100" height="100">
     </div>
     <div id="menu">
-        <a href="index.html"></a>
-        <a href="zamowienia.html"></a>
-        <a href="blog.html"></a>
-        <a href="http://gatunki-kawy.pl" target="_blank"></a>
+        <a href="index.html">Strona główna</a>
+        <a href="zamowienia.html">Zamówienia</a>
+        <a href="blog.html">Blog o kawie</a>
+        <a href="http://gatunki-kawy.pl" target="_blank">Odwiedź także</a>
     </div>
     <div id="baner">
         <h1>Hurtownia kawy</h1>
@@ -23,10 +23,10 @@
     <div id="lewy">
         <h2>Oferta</h2>
         <ul>
-            <li>Kawa palona Arabica</li>
-            <li>Kawa palona Robusta</li>
-            <li>Kawa bezkofeinowa</li>
-            <li>Kawa zielona</li>
+            <li>1. Kawa palona Arabica</li>
+            <li>2. Kawa palona Robusta</li>
+            <li>3. Kawa bezkofeinowa</li>
+            <li id="cztery">4. Kawa zielona</li>
         </ul>
     </div>
     <div id="prawy">
@@ -40,5 +40,6 @@
     <div id="stopka">
         Stronę przygotował: <b>00000000001</b>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
