--- a/js/egzamin2/index.html
+++ b/js/egzamin2/index.html
@@ -8,32 +8,36 @@
     <link rel="stylesheet" href="styl4.css">
 </head>
 <body>
+<header>
     <div id="logo">
-        <img src="logo.png" alt="obrazek :)">
+        <img src="logo.png" alt="obrazek :)" height="100" width="100">
     </div>
     <div id="menu">
-        <a href="index.html"></a>
-        <a href="zamowienia.html"></a>
-        <a href="blog.html"></a>
-        <a href="http://gatunki-kawy.pl" target="_blank"></a>
+        <a href="index.html">Strona główna</a>
+        <a href="zamowienia.html">Zamówienia</a>
+        <a href="blog.html">Blog o kawie</a>
+        <a href="http://gatunki-kawy.pl" target="_blank">Odwiedź także</a>
     </div>
+</header>
     <div id="baner">
         <h1>Hurtownia kawy</h1>
     </div>
+<div>
     <div id="lewy">
         <h2>Oferta</h2>
         <ul>
-            <li>Kawa palona Arabica</li>
-            <li>Kawa palona Robusta</li>
-            <li>Kawa bezkofeinowa</li>
-            <li>Kawa zielona</li>
+            <li>1. Kawa palona Arabica</li>
+            <li>2. Kawa palona Robusta</li>
+            <li>3. Kawa bezkofeinowa</li>
+            <li id="cztery">4. Kawa zielona</li>
         </ul>
     </div>
     <div id="prawy">
-        <img src="kawa.png" alt="Poczęstuj się">
+        <img src="kawa.png" alt="Poczęstuj się" height="400" width="400">
     </div>
-    <div id="stopka">
+</div>
+    <footer id="stopka">
         Stronę przygotował: <b>00000000001</b>
-    </div>
+    </footer>
 </body>
 </html>
